--- a/style.css
+++ b/style.css
@@ -1,14 +1,9 @@
 /*
-Theme Name: Salient Child Theme
+Theme Name: BFL Salient Theme
 Description: This is a custom child theme for Salient
-Theme URI:   https://themeforest.net/item/salient-responsive-multipurpose-theme/4363266
-Author: ThemeNectar
-Author URI:  https://themeforest.net/user/themenectar
+Theme URI:   https://github.com/shrinkray/bfl-salient-theme
+Author: ShrinkrayLabs
+Author URI:  https://shrinkraylabs.com
 Template: salient
 Version: 1.0
 */
-
-
-
-
-
