--- a/src/app.scss
+++ b/src/app.scss
@@ -56,33 +56,33 @@ main {
 .unit-cost {
   margin-bottom: .5rem;
 
-  .dollar-sign {
+  > .dollar-sign {
     font-weight: 500;
     font-size: 2rem;
   }
 
-  .value {
+  > .value {
     font-size: 3rem;
     font-weight: 700;
 
   }
 
-  .day-cost,
+  > .day-cost,
   .week-cost {
     font-size: 2rem;
     font-weight: 700;
   }
 
-  .check-prices {
+  > .check-prices {
     font-weight: 500;
     text-align: center;
     line-height: 1.2;
   }
 
-  .range {
+  > .range {
     color: var(--bfl-concrete-tint);
   }
-  .plus-char {
+  > .plus-char {
     vertical-align: super;
     font-weight: 700;
   }
@@ -126,7 +126,7 @@ body {
       table {
         tr {
           th {
-            background-color: #f5f5f5;
+            background-color: #f5f5f5 !important;
           }
           &:nth-child(2n+1) {
            background-color: #eee !important;
