--- a/src/app.scss
+++ b/src/app.scss
@@ -168,3 +168,8 @@ body {
   width: 250px;
   line-height: 0;
 }
+
+.qubely-block-39b024 >.qubely-row-overlay {
+    opacity: 0.54;
+    background-color: #FFF;
+}
