Refactor rendered files
- Change routes and rerender

--- a/src/app.scss
+++ b/src/app.scss
@@ -169,7 +169,7 @@ body {
   line-height: 0;
 }
 
-.qubely-block-39b024 >.qubely-row-overlay {
+.hero--is-overlay >.qubely-row-overlay {
     opacity: 0.54;
     background-color: #FFF;
 }
